Kubenetes/echo-chat-front-end-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: echo-chat-front-end-service
  labels:
    app: echo-chat-front-end-service
spec:
  replicas: 
  selector:
    matchLabels:
      app: echo-chat-front-end-service
  template:
    metadata:
      labels:
        app: echo-chat-front-end-service
    spec:
      containers:
      - name: echo-chat-front-end-service
        image: huukhanh0653/front-end:v1.0
        ports:
        - containerPort: 5173
---
apiVersion: v1
kind: Service
metadata:
  name: echo-chat-front-end-service
spec:
  selector:
    app: echo-chat-front-end-service
  ports:
    - protocol: TCP
      port: 5173
      targetPort: 5173
  type: ClusterIP
