Kubenetes/echo-chat-manage-server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: echo-chat-manage-server-service
  labels:
    app: echo-chat-manage-server-service
spec:
  replicas: 3
  selector:
    matchLabels:
      app: echo-chat-manage-server-service
  template:
    metadata:
      labels:
        app: echo-chat-manage-server-service
    spec:
      containers:
      - name: echo-chat-manage-server-service
        image: huukhanh0653/message:v1.0
        ports:
        - containerPort: 5432
---
apiVersion: v1
kind: Service
metadata:
  name: echo-chat-manage-server-service
spec:
  selector:
    app: echo-chat-manage-server-service
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
  type: ClusterIP
