Kubenetes/echo-chat-user-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: echo-chat-user-service
  labels:
    app: echo-chat-user-service
spec:
  replicas: 3
  selector:
    matchLabels:
      app: echo-chat-user-service
  template:
    metadata:
      labels:
        app: echo-chat-user-service
    spec:
      containers:
      - name: echo-chat-user-service
        image: huukhanh0653/user:v1.0
        ports:
        - containerPort: 5001
---
apiVersion: v1
kind: Service
metadata:
  name: echo-chat-user-service
spec:
  selector:
    app: echo-chat-user-service
  ports:
    - protocol: TCP
      port: 5001
      targetPort: 5001
  type: ClusterIP
