Kubenetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: discord-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: localhost
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: echo-chat-message-service
            port:
              number: 5000
  - host: localhost
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: echo-chat-front-end-service
            port:
              number: 8080
  - host: notification-service.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: discord-notification-service
            port:
              number: 8080
